Fixed all lessons overflow on tablets

--- a/app/src/components/features/lessons/allLessons/allLessons.style.scss
+++ b/app/src/components/features/lessons/allLessons/allLessons.style.scss
@@ -34,14 +34,6 @@
   }
 }
 
-// 1084px
-@media screen and (max-width: 67.75em) {
-  .all-lessons {
-    width: 100vw;
-    height: 100vh;
-  }
-}
-
 // 680px
 @media screen and (max-width: 42.5em) {
   .all-lessons {
